@@ -1,0 +1,18 @@
+benzene
+ OpenBabel05240809133D
+
+  6  6  0  0  0  0  0  0  0  0999 V2000
+    1.2000   -0.6920    0.0030 C   0  0  0  0  0
+   -0.0000   -1.3810   -0.0020 C   0  0  0  0  0
+   -1.2000   -0.6910   -0.0000 C   0  0  0  0  0
+   -1.2070    0.6880    0.0010 C   0  0  0  0  0
+    0.0000    1.3890   -0.0000 C   0  0  0  0  0
+    1.2070    0.6870   -0.0020 C   0  0  0  0  0
+  1  2  1  0  0  0
+  1  6  2  0  0  0
+  2  3  2  0  0  0
+  3  4  1  0  0  0
+  4  5  2  0  0  0
+  5  6  1  0  0  0
+M  END
+$$$$
