@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
-	Name="OBCommonFormats"
-	ProjectGUID="{C3CC4EC4-B4B7-48AD-99E4-E6742B16730C}"
-	RootNamespace="OBCommonFormats"
+	Version="8.00"
+	Name="example1"
+	ProjectGUID="{2BB10F1B-1905-44D2-895D-F10B97BAE1E6}"
+	RootNamespace="example1"
 	>
 	<Platforms>
 		<Platform
@@ -15,10 +15,10 @@
 	</ToolFiles>
 	<Configurations>
 		<Configuration
-			Name="Debug|Win32"
-			OutputDirectory=".\Debug"
-			IntermediateDirectory=".\Debug"
-			ConfigurationType="2"
+			Name="Release|Win32"
+			OutputDirectory=".\Release"
+			IntermediateDirectory=".\Release"
+			ConfigurationType="1"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
@@ -40,24 +40,115 @@
 			/>
 			<Tool
 				Name="VCMIDLTool"
-				PreprocessorDefinitions="_DEBUG"
-				MkTypLibCompatible="true"
-				SuppressStartupBanner="true"
-				TargetEnvironment="1"
-				TypeLibraryName=".\Debug/OBCommonFormats.tlb"
+				TypeLibraryName=".\Release/example1.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				UseUnicodeResponseFiles="false"
+				Optimization="2"
+				InlineFunctionExpansion="1"
+				AdditionalIncludeDirectories="../../include"
+				PreprocessorDefinitions="NDEBUG;WIN32;_CONSOLE;USING_DYNAMIC_LIBS;HAVE_CONFIG_H;__KCC"
+				StringPooling="true"
+				RuntimeLibrary="2"
+				EnableFunctionLevelLinking="true"
+				RuntimeTypeInfo="true"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation=".\Release/"
+				ObjectFile=".\Release/"
+				ProgramDataBaseFileName=".\Release/"
+				WarningLevel="3"
+				SuppressStartupBanner="true"
+			/>
+			<Tool
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="NDEBUG"
+				Culture="2057"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="obconv.lib oberror.lib OBDLL.lib "
+				OutputFile="..\$(ProjectName).exe"
+				LinkIncremental="1"
+				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories=".."
+				ProgramDatabaseFile=".\Release/babel.pdb"
+				SubSystem="1"
+				TargetMachine="1"
+			/>
+			<Tool
+				Name="VCALinkTool"
+			/>
+			<Tool
+				Name="VCManifestTool"
+			/>
+			<Tool
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+				SuppressStartupBanner="true"
+				OutputFile=".\Release/example1.bsc"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+				CommandLine=""
+			/>
+		</Configuration>
+		<Configuration
+			Name="Debug|Win32"
+			OutputDirectory=".\Debug"
+			IntermediateDirectory=".\Debug"
+			ConfigurationType="1"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
+			UseOfMFC="0"
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			CharacterSet="0"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+				Description="Copying compiler-specific babelconfig.h (if out of date)"
+				CommandLine="xcopy /Y /D ..\babelconfig.h ..\..\include\openbabel\"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				TypeLibraryName=".\Debug/example1.tlb"
+				HeaderFileName=""
+			/>
+			<Tool
+				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../../include"
-				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;_USRDLL;INCHI_LINK_AS_DLL;HAVE_CONFIG_H;USING_DYNAMIC_LIBS;OBCOMMON_EXPORTS"
+				PreprocessorDefinitions="_DEBUG;WIN32;_CONSOLE;USING_DYNAMIC_LIBS;HAVE_CONFIG_H;__KCC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				RuntimeTypeInfo="true"
-				PrecompiledHeaderFile=""
+				PrecompiledHeaderFile=".\Debug/example1.pch"
 				AssemblerListingLocation=".\Debug/"
 				ObjectFile=".\Debug/"
 				ProgramDataBaseFileName=".\Debug/"
@@ -79,15 +170,14 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				IgnoreImportLibrary="false"
-				AdditionalDependencies="obconvD.lib obdllD.lib OBErrorD.lib"
-				OutputFile="..\Debug/OBCommonD.obf"
+				AdditionalDependencies="obconvd.lib oberrorD.lib OBDLLD.lib"
+				OutputFile="..\debug/$(ProjectName).exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="..\debug,.."
+				AdditionalLibraryDirectories="..\debug"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\Debug/OBCommonD.pdb"
-				ImportLibrary="..\Debug/obcommonD.lib"
+				ProgramDatabaseFile=".\Debug/babel.pdb"
+				SubSystem="1"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -102,7 +192,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\Debug/OBCommon.bsc"
+				OutputFile=".\Debug/example1.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -118,105 +208,6 @@
 				CommandLine=""
 			/>
 		</Configuration>
-		<Configuration
-			Name="Release|Win32"
-			OutputDirectory=".\Release"
-			IntermediateDirectory=".\Release"
-			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
-			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="false"
-			CharacterSet="0"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-				Description="Copying compiler-specific babelconfig.h (if out of date)"
-				CommandLine="xcopy /Y /D ..\babelconfig.h ..\..\include\openbabel\"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-				PreprocessorDefinitions="NDEBUG"
-				MkTypLibCompatible="true"
-				SuppressStartupBanner="true"
-				TargetEnvironment="1"
-				TypeLibraryName=".\Release/OBCommonFormats.tlb"
-				HeaderFileName=""
-			/>
-			<Tool
-				Name="VCCLCompilerTool"
-				Optimization="2"
-				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="../../include"
-				PreprocessorDefinitions="NDEBUG;USING_DYNAMIC_LIBS;WIN32;_WINDOWS;_USRDLL;INCHI_LINK_AS_DLL;HAVE_CONFIG_H;OBCOMMON_EXPORTS"
-				StringPooling="true"
-				RuntimeLibrary="2"
-				EnableFunctionLevelLinking="true"
-				RuntimeTypeInfo="true"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"
-				WarningLevel="3"
-				SuppressStartupBanner="true"
-			/>
-			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="NDEBUG"
-				Culture="2057"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
-			<Tool
-				Name="VCLinkerTool"
-				IgnoreImportLibrary="true"
-				AdditionalDependencies="obconv.lib obdll.lib oberror.lib"
-				OutputFile="..\obcommon.obf"
-				LinkIncremental="1"
-				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories=".."
-				ProgramDatabaseFile=".\Release/OBCommon.pdb"
-				ImportLibrary="../obcommon.lib"
-				TargetMachine="1"
-			/>
-			<Tool
-				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
-			/>
-			<Tool
-				Name="VCXDCMakeTool"
-			/>
-			<Tool
-				Name="VCBscMakeTool"
-				SuppressStartupBanner="true"
-				OutputFile=".\Release/OBCommon.bsc"
-			/>
-			<Tool
-				Name="VCFxCopTool"
-			/>
-			<Tool
-				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
-			/>
-			<Tool
-				Name="VCPostBuildEventTool"
-			/>
-		</Configuration>
 	</Configurations>
 	<References>
 	</References>
@@ -226,39 +217,7 @@
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
 			<File
-				RelativePath="..\..\src\formats\APIInterface.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\formats\atomrecord.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\formats\cansmilesformat.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\formats\mdlformat.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\formats\mol2format.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\obmolecformat.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\formats\opendxformat.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\formats\pdbformat.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\formats\smilesformat.cpp"
+				RelativePath=".\example1.cpp"
 				>
 			</File>
 		</Filter>
@@ -267,15 +226,7 @@
 			Filter="h;hpp;hxx;hm;inl"
 			>
 			<File
-				RelativePath="..\..\include\openbabel\alias.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\include\openbabel\atomclass.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\include\openbabel\babelconfig.h"
+				RelativePath="..\babelconfig.h"
 				>
 			</File>
 			<File
@@ -283,11 +234,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\include\openbabel\obconversion.h"
+				RelativePath="..\..\src\obconversion.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\include\openbabel\obmolecformat.h"
+				RelativePath="..\..\include\openbabel\oberror.h"
 				>
 			</File>
 		</Filter>
